--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,17 +2,22 @@
 name = "finesse-benchmark"
 version = "0.1.0"
 description = ""
-authors = [
-    {name = "enzoescipy",email = "enzoescipy@gmail.com"}
-]
+authors = [{ name = "winter.sci.dev", email = "enzoescipy@gmail.com" }]
 readme = "README.md"
-requires-python = ">=3.12"
-dependencies = [
-]
+requires-python = ">=3.10,<3.15"
 
 [tool.poetry]
-packages = [{include = "finesse_benchmark", from = "src"}]
+packages = [{ include = "finesse_benchmark", from = "src" }]
 
-[build-system]
-requires = ["poetry-core>=2.0.0,<3.0.0"]
-build-backend = "poetry.core.masonry.api"
+[tool.poetry.dependencies]
+pydantic = "^2.12.3"
+torch = "^2.9.0"
+datasets = "^4.3.0"
+transformers = "^4.57.1"
+matplotlib = "^3.10.7"
+seaborn = "^0.13.2"
+typer = "^0.20.0"
+
+
+[tool.poetry.scripts]
+finesse = "finesse_benchmark.cli:app"
