tokenizer byok handled

--- a/benchmark.leaderboard.yaml
+++ b/benchmark.leaderboard.yaml
@@ -21,10 +21,36 @@ models:
   native_embedder:
     name: "Snowflake/snowflake-arctic-embed-l-v2.0"  # Reference long-context embedder
 
-  # BYOK Example (Uncomment for external APIs; set env vars for keys)
+  # [BYOK Mode Example - Uncomment and edit for BYOK usage]
+  # For byok_mode: Specify the API provider and model name for litellm
   # byok_embedder:
-  #   provider: "openai"
-  #   name: "text-embedding-3-large"
+  #   provider: "openai"  # e.g., 'openai', 'cohere', 'google'
+  #   name: "text-embedding-3-large"  # Provider-specific model name
+  #   tokenizer_path: null  # Optional: Hugging Face tokenizer path for accurate token counting
+  #                        # e.g., 'Cohere/cohere-tokenizer-fast' for Cohere models
+  #                        # If null, system will use tiktoken for OpenAI or fallback with warning
+  #
+  # IMPORTANT: API keys MUST be set as environment variables for security.
+  # Do NOT store keys in this YAML file or commit them to version control.
+  # Examples (set in your terminal before running):
+  #
+  # For OpenAI:
+  #   export OPENAI_API_KEY="sk-your-key-here"  # Linux/macOS
+  #   $env:OPENAI_API_KEY="sk-your-key-here"  # Windows PowerShell
+  #
+  # For Cohere:
+  #   export COHERE_API_KEY="your-cohere-key-here"
+  #
+  # For Google:
+  #   export GOOGLE_API_KEY="your-google-key-here"
+  #
+  # Tokenizer Recommendations:
+  # - OpenAI models: Leave tokenizer_path null (uses tiktoken automatically)
+  # - Cohere models: Set tokenizer_path: "Cohere/cohere-tokenizer-fast"
+  # - Google models: Set tokenizer_path: "google-bert/bert-base-uncased" or similar
+  #
+  # litellm will automatically detect and use the appropriate environment variable
+  # based on the 'provider' you specify. This ensures your keys remain secure.
 
 # Dataset Configuration (Fixed for Reproducibility)
 dataset:
