checksum for database version hash specification

--- a/src/finesse_benchmark/benchmark.default.yaml
+++ b/src/finesse_benchmark/benchmark.default.yaml
@@ -55,6 +55,7 @@ models:
 dataset:
   path: "enzoescipy/finesse-benchmark-database"  # HF dataset path
   split: "train"  # Split to use
+  commit_hash: "e76559cba6d9848735ab801c2b6ea08d13d6fb73"
 
 # Probe Configuration
 probe_config:
