--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,20 +1,23 @@
 [project]
 name = "finesse-benchmark"
-version = "0.6.0"
+version = "0.6.1"
 description = "sophisticated evaluation framework designed to assess the performance of long-context embedding models on semantic understanding and information retention"
 authors = [{ name = "winter.sci.dev", email = "enzoescipy@gmail.com" }]
 readme = "README.md"
-requires-python = ">=3.10,<3.15"
+requires-python = ">=3.10,<3.13"
 dependencies = [
-    "pydantic~=2.12.0",
-    "torch~=2.9.0",
+
+    # dependency problem with colab
+    "pydantic~=2.11.0",
+    "torch~=2.8.0",
+
+    # free-to-charge
     "datasets~=4.3.0",
     "transformers~=4.57.0",
     "seaborn~=0.13.0",
     "typer~=0.20.0",
     "litellm~=1.78.0",
     "matplotlib~=3.10.0",
-    "click~=8.3.0",
     "tiktoken~=0.12.0"
 ]
 
