--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "finesse-benchmark"
-version = "0.6.1"
+version = "0.6.3"
 description = "sophisticated evaluation framework designed to assess the performance of long-context embedding models on semantic understanding and information retention"
 authors = [{ name = "winter.sci.dev", email = "enzoescipy@gmail.com" }]
 readme = "README.md"
@@ -10,10 +10,12 @@ dependencies = [
     # dependency problem with colab
     "pydantic~=2.11.0",
     "torch~=2.8.0",
+    "datasets~=4.0.0",
+    "pyarrow~=18.1.0",
+    "click==8.1.3",
 
     # free-to-charge
-    "datasets~=4.3.0",
-    "transformers~=4.57.0",
+    "transformers~=4.5.0",
     "seaborn~=0.13.0",
     "typer~=0.20.0",
     "litellm~=1.78.0",
