--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,9 @@ dependencies = [
     "typer~=0.20.0",
     "litellm~=1.78.0",
     "matplotlib~=3.10.0",
-    "tiktoken~=0.12.0"
+    "tiktoken~=0.12.0",
+
+    "py-cpuinfo~=9.0.0",
 ]
 
 
