--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "finesse-benchmark"
-version = "0.8.0"
+version = "0.9.0"
 description = "sophisticated evaluation framework designed to assess the performance of long-context embedding models on semantic understanding and information retention"
 authors = [{ name = "winter.sci.dev", email = "enzoescipy@gmail.com" }]
 readme = "README.md"
@@ -23,6 +23,8 @@ dependencies = [
 
     "py-cpuinfo~=9.0.0",
     "einops~=0.8.1",
+
+    "ruamel.yaml~=0.18"
 ]
 
 
