--- a/src/finesse_benchmark/benchmark.leaderboard.yaml
+++ b/src/finesse_benchmark/benchmark.leaderboard.yaml
@@ -90,7 +90,7 @@ probe_config:
     min: 4   # Minimum length: Tests basic composition
     max: 64  # Maximum length: Tests scaling up to moderate long-context
   samples_per_length: 25  # Samples per length: Ensures reliable averages (25 evals per point)
-  token_per_sample : 512  # Number of tokens per chunk
+  token_per_sample : 510  # Number of tokens per chunk, 512 - 2 (for the maximum capacity but having safer margin)
 
 # Advanced Settings (Defaults for Fair Comparison)
 advanced:
